# mmtaudioparser

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  mainpage.md
include/mmtaudioparser/: mmtaudioparser.h  mpeghparser.h
src/: CMakeLists.txt  common.h  logging.h  mmtaudioparser_config.h.in  mpeghparser.cpp  mpeghparserpimpl.cpp  mpeghparserpimpl.h  parserutils.cpp  parserutils.h
